test/error/test3.pl0
PROGRAM test3
VAR x,y;
BEGIN
    x:=1;
    y:=2;
    z:=y+x
END